[package]
name = "x"
version = "0.5.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.4"
glob = "0.3.0"
tiny_http = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4.19"
base64 = "0.13.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0.2"
predicates = "2.0.3"
